# Chip8_emulator

./: CMakeLists.txt  README.md
src/: chip8.c  chip8.h  main.c  platform.c  platform.h
